# ntk

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HOW_TO_OPEN_AN_ISSUE.md  IMPLEMENTATION-SEQUENCE.md  LICENSE  NOTICE  NTK-roadmap.md  README.md  act_output.txt  deny.toml
.cargo/: audit.toml
.claude/: settings.local.json
.claude/rules/: clippy-gate.md  cuda-ci.md  gpu-vendor.md  implementation-gate.md  l1-l2-invariants.md  l1-template-dedup.md  l4-context-injection.md  stack-trace-classifier.md
.claude/skills/: add-stack-trace-language.md  bench-runner.md  ci-validate.md
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bench-report.md  bug_report.md  config.yml  feature_request.md  stack_trace_language.md
.github/workflows/: ci.yml  release.yml
bench/: README.md  ab_session.ps1  generate_fixtures.ps1  parse_transcript.ps1  prompt_formats.ps1  replay.ps1  replay.sh  report.ps1  run_all.ps1  run_all.sh
bench/fixtures/: already_short.meta.json  bazel_build_verbose.meta.json  bazel_build_verbose.txt  cargo_build_verbose.meta.json  cargo_build_verbose.txt  cargo_test_failures.meta.json  cargo_test_failures.txt  csharp_aspnet_trace.meta.json  csharp_aspnet_trace.txt  docker_compose_logs.meta.json  docker_compose_logs.txt  docker_logs_repetitive.meta.json  docker_logs_repetitive.txt  dotnet_build_warnings.meta.json  dotnet_build_warnings.txt  elixir_phoenix_trace.meta.json  elixir_phoenix_trace.txt  eslint_stylish.meta.json  eslint_stylish.txt  fastapi_starlette_trace.meta.json  fastapi_starlette_trace.txt  generic_long_log.meta.json  generic_long_log.txt  git_diff_large.meta.json  git_diff_large.txt  go_panic_trace.meta.json  go_panic_trace.txt  go_test_verbose.meta.json  go_test_verbose.txt  gradle_build_verbose.meta.json  gradle_build_verbose.txt  kotlin_android_trace.meta.json  kotlin_android_trace.txt  kubectl_describe_pod.meta.json  kubectl_describe_pod.txt  kubectl_get_events.meta.json  kubectl_get_events.txt  maven_build_tests.meta.json  maven_build_tests.txt  nextjs_build_routes.meta.json  (+27 more)
bench/prompts/: baseline.md
bindings/ctxlint-js/: README.md  index.js  package.json  test.js
config/: default_config.json
docs/: CNAME  app.js  editor-integrations.md  index.html  install.ps1  install.sh  plano-de-testes.md  prompt-format-ablation.md  spec-poc-bench.md  spec-second-binding.md  style.css  testing-plan.md
docs/rfcs/: 0001-context-linter-spec.md
examples/: gpu_probe.rs
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: layer1_filter.rs  layer2_compress.rs  spec_loader.rs
marketing/posts/: README.md  linkedin-en-us.md  linkedin-pt-br.md  reddit-en-us.md  reddit-pt-br.md  tabnews-en-us.md  tabnews-pt-br.md
rules/container_log/: docker.yaml  kubectl.yaml
rules/generic/: ansi_strip.yaml  progress_bars.yaml
rules/stack_trace/: dotnet.yaml  elixir.yaml  go.yaml  java.yaml  kotlin.yaml  node.yaml  php.yaml  python.yaml  ruby.yaml  rust.yaml  swift.yaml
scripts/: append-issue-validation.sh  build.ps1  build.sh  create-issues.sh  install.ps1  install.sh  ntk-hook.ps1  ntk-hook.sh
src/: config.rs  detector.rs  gpu.rs  installer.rs  lib.rs  main.rs  mcp_server.rs  metrics.rs  security.rs  server.rs  telemetry.rs
src/compressor/: layer1_filter.rs  layer2_tokenizer.rs  layer3_backend.rs  layer3_candle.rs  layer3_inference.rs  layer3_llamacpp.rs  layer4_context.rs  mod.rs  spec_loader.rs
src/output/: dashboard.rs  graph.rs  mod.rs  table.rs  terminal.rs
system-prompts/: build.txt  diff.txt  log.txt  test.txt
tests/benchmarks/: compression_bench.rs
tests/fixtures/: cargo_test_output.txt  cargo_test_rtk_filtered.txt  docker_logs.txt  l3_trigger.txt  next_build_output.txt  tsc_output.txt  vitest_output.txt
tests/integration/: bench_ratios_regression.rs  cli_tests.rs  compression_pipeline_tests.rs  endpoint_tests.rs  llamacpp_mock_tests.rs  ollama_mock_tests.rs  quality_regression_tests.rs  snapshot_tests.rs  (+2 more)
(+32 files in other folders)
